ci(build): apply JDK 17 --add-opens project-wide via ThisBuild
The previous commit only set Test / fork + javaOptions in amber's own
build.sbt, but ArrowUtilsSpec lives under common/workflow-core and
common/workflow-operator. When the CI invokes WorkflowCore/jacoco and
WorkflowOperator/jacoco those tests still ran without --add-opens and
failed at MemoryUtil init.

Move the settings to ThisBuild scope in the root build.sbt so every
subproject's test JVM forks with the same flags; drop the now-duplicate
amber/build.sbt block.